[gd_scene load_steps=5 format=3 uid="uid://dx4pgl8kj0t1k"]

[ext_resource type="Script" uid="uid://cmrctjp1l2gch" path="res://ui/pause_screen/pause_screen.gd" id="1_cag2w"]
[ext_resource type="Theme" uid="uid://ckatomkgrjytk" path="res://assets/font,themes/ui_theme.tres" id="2_gfy2w"]
[ext_resource type="PackedScene" uid="uid://di5pg5ab0mckm" path="res://ui/settings_screen/SettingsScreen.tscn" id="3_6l4r2"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cag2w"]
bg_color = Color(0, 0, 0, 0.560784)

[node name="PauseScreen" type="CanvasLayer" groups=["ui_screen"]]
script = ExtResource("1_cag2w")

[node name="Panel" type="Panel" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_cag2w")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_gfy2w")

[node name="CenterContainer" type="CenterContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 214.0
offset_bottom = 120.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.7, 0.7)

[node name="VBoxContainer" type="VBoxContainer" parent="Control/CenterContainer"]
custom_minimum_size = Vector2(200, 100)
layout_mode = 2

[node name="Label" type="Label" parent="Control/CenterContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_gfy2w")
theme_override_font_sizes/font_size = 48
text = "PAUSED"
horizontal_alignment = 1

[node name="ContinueButton" type="Button" parent="Control/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Continue"

[node name="SettingsButton" type="Button" parent="Control/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Settings"

[node name="RestartButton" type="Button" parent="Control/CenterContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_gfy2w")
text = "Restart game"

[node name="QuitButton" type="Button" parent="Control/CenterContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_gfy2w")
text = "Quit"

[node name="SettingsScreen" parent="." instance=ExtResource("3_6l4r2")]
visible = false

[connection signal="settings_closed" from="SettingsScreen" to="." method="_on_settings_closed"]
